Fix resetting the default bounds of the layer projection when assigning to a new image

BUG:389503